--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Poppins, sans-serif;
-  background-color: rgba(39, 32, 68, 1);
+  background-color: #15160e;
 }
 
 .container {
@@ -54,7 +54,58 @@ header a {
   margin-top: 32px;
 }
 
-@media (max-width: 900px) {
+footer .container {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("../images/athens-footer.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+  padding: 90px 150px 82px;
+}
+
+footer h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: left;
+  color: rgba(255, 255, 255, 1);
+  margin-bottom: 16px;
+}
+
+footer a {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: rgba(255, 255, 255, 1);
+}
+
+footer ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer li {
+  margin-bottom: 8px;
+}
+
+footer p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: rgba(255, 255, 255, 1);
+  margin: 0;
+}
+
+footer .about-athens,
+.about-me {
+  padding-right: 30px;
+}
+
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
@@ -71,5 +122,18 @@ header a {
 
   header a {
     font-size: 12px;
+  }
+
+  footer .container {
+    padding: 0;
+    display: block;
+  }
+
+  footer div {
+    padding-left: 25px;
+  }
+
+  footer h3 {
+    padding-top: 40px;
   }
 }
