--- a/src/styles.css
+++ b/src/styles.css
@@ -55,13 +55,16 @@ header a {
 }
 
 footer .container {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+  background-image: linear-gradient(
+      rgba(21, 22, 14, 0.8),
+      rgba(21, 22, 14, 0.8)
+    ),
     url("../images/athens-footer.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
-  padding: 90px 150px 82px;
+  padding: 100px 150px 82px;
 }
 
 footer h3 {
@@ -78,7 +81,7 @@ footer a {
   font-weight: 400;
   line-height: 24px;
   text-align: left;
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 0.7);
 }
 
 footer ul {
@@ -96,7 +99,7 @@ footer p {
   font-weight: 400;
   line-height: 24px;
   text-align: left;
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 0.7);
   margin: 0;
 }
 
