--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,46 @@ header a {
   margin-top: 32px;
 }
 
+section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  background-color: white;
+  padding: 100px 90px;
+}
+
+section img {
+  width: 570px;
+  height: 461px;
+}
+
+section h3 {
+  color: rgba(39, 32, 68, 0.3);
+  margin: 0;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 5px;
+}
+
+section h2 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 50px;
+
+  margin: 18px 0;
+}
+
+section a {
+  color: rgba(39, 32, 68, 0.7);
+  text-decoration: none;
+}
+
+section p {
+  color: rgba(39, 32, 68, 0.7);
+  margin: 10px;
+}
+
 footer .container {
   background-image: linear-gradient(
       rgba(21, 22, 14, 0.8),
