--- a/src/styles.css
+++ b/src/styles.css
@@ -105,6 +105,7 @@ footer .container {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
   padding: 100px 150px 82px;
+  grid-gap: 64px;
 }
 
 footer h3 {
@@ -141,11 +142,6 @@ footer p {
   text-align: left;
   color: rgba(255, 255, 255, 0.7);
   margin: 0;
-}
-
-footer .about-athens,
-.about-me {
-  padding-right: 30px;
 }
 
 @media (max-width: 960px) {
