--- a/src/styles.css
+++ b/src/styles.css
@@ -54,20 +54,25 @@ header a {
   margin-top: 32px;
 }
 
-section {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-
+main {
   background-color: white;
   padding: 100px 90px;
 }
 
-section img {
-  width: 570px;
-  height: 461px;
+.grid {
+  display: grid;
+  grid-gap: 64px;
 }
 
-section h3 {
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.img-responsive {
+  max-width: 100%;
+}
+
+main h3 {
   color: rgba(39, 32, 68, 0.3);
   margin: 0;
   font-size: 16px;
@@ -76,25 +81,24 @@ section h3 {
   letter-spacing: 5px;
 }
 
-section h2 {
+main h2 {
   font-size: 40px;
   font-weight: 700;
   line-height: 50px;
-
   margin: 18px 0;
 }
 
-section a {
+main a {
   color: rgba(39, 32, 68, 0.7);
   text-decoration: none;
 }
 
-section p {
+main p {
   color: rgba(39, 32, 68, 0.7);
   margin: 10px;
 }
 
-footer .container {
+footer {
   background-image: linear-gradient(
       rgba(21, 22, 14, 0.8),
       rgba(21, 22, 14, 0.8)
@@ -103,7 +107,6 @@ footer .container {
   background-repeat: no-repeat;
   background-size: cover;
   display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
   padding: 100px 150px 82px;
   grid-gap: 64px;
 }
@@ -144,6 +147,10 @@ footer p {
   margin: 0;
 }
 
+.grid-3-columns-with-first-narrow {
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
 @media (max-width: 960px) {
   header {
     padding: 60px 0;
@@ -163,16 +170,12 @@ footer p {
     font-size: 12px;
   }
 
-  footer .container {
-    padding: 0;
-    display: block;
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 64px;
   }
 
-  footer div {
-    padding-left: 25px;
-  }
-
-  footer h3 {
-    padding-top: 40px;
+  section {
+    padding: 30px;
   }
 }
