Improved responsiveness of the web-page

--- a/src/styles.css
+++ b/src/styles.css
@@ -97,8 +97,8 @@ main p {
   color: rgba(39, 32, 68, 0.7);
   margin: 10px;
 }
-.cards {
-  background: red;
+section.cards {
+  background: rgb(246, 247, 245);
 }
 
 .card-header.grid {
@@ -113,7 +113,7 @@ main p {
 .grid-3-columns {
   grid-gap: 30px;
   grid-template-columns: 1fr 1fr 1fr;
-  padding: 30px 70px 100px;
+  padding: 30px 110px 100px;
 }
 
 .grid-3-columns div {
@@ -159,8 +159,12 @@ main p {
   margin: 40px 32px;
 }
 
+.card-footer-first {
+  padding-top: 25px;
+}
+
 .btn {
-  padding: 16px 110px;
+  padding: 16px 100px;
   font-size: 14px;
   font-weight: 700;
   line-height: 21px;
@@ -169,6 +173,7 @@ main p {
   color: white;
   background-color: #182013;
   text-transform: uppercase;
+  display: block;
 }
 
 .text-center {
@@ -176,7 +181,7 @@ main p {
 }
 
 .instagram-gallery {
-  margin: 100px 0;
+  padding: 100px 0;
 }
 
 footer {
@@ -251,12 +256,41 @@ footer p {
     font-size: 12px;
   }
 
+  .cards h3 {
+    padding: 0;
+  }
+
   .grid {
     grid-template-columns: 1fr;
     grid-gap: 64px;
+    padding: 30px 30px;
   }
 
   section {
     padding: 30px;
+    margin-bottom: 0;
+  }
+
+  .card-header img {
+    display: none;
+  }
+
+  .embed {
+    aspect-ratio: 16/9;
+  }
+
+  .card-footer-first {
+    padding-top: 0;
+  }
+
+  .grid-3-columns {
+    padding: 0px;
+  }
+  section.instagram-gallery {
+    padding: 30px;
+  }
+
+  footer {
+    padding: 0;
   }
 }
