Adjusted button padding

--- a/src/styles.css
+++ b/src/styles.css
@@ -168,7 +168,7 @@ section.cards {
 }
 
 .btn {
-  padding: 16px 100px;
+  padding: 16px;
   font-size: 14px;
   font-weight: 700;
   line-height: 21px;
