Undid image change

--- a/src/styles.css
+++ b/src/styles.css
@@ -193,7 +193,7 @@ footer {
       rgba(21, 22, 14, 0.8),
       rgba(21, 22, 14, 0.8)
     ),
-    url("../images/athens-agora-footer.jpg");
+    url("../images/athens-footer.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: grid;
